Rewrite Wall and WallQueue to use teleports instead of transformations